[package]
name = "evtxgrep"
version = "0.2.0"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#evtx = { git = "https://github.com/janstarke/evtx" }
evtx = { path = "../evtx" }
anyhow = "1.0.40"
argparse = "0.2.2"
log = "0.4"
simple_logger = "1.11.0"
#evtx = "0.7.2"
libxml = "0.3.0"
