[package]
name = "evtxgrep"
version = "0.2.1"
authors = ["Jan Starke <Jan.Starke@t-systems.com>"]
edition = "2018"
description = "XPath based search in Windows Event Log files"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evtx = { git = "https://github.com/janstarke/evtx", branch = "feature/visitor"}
#evtx = "0.7"
anyhow = "1.0.40"
clap = "2"
log = "0.4"
simple_logger = "1"
#evtx = "0.7.2"
libxml = "0.3.0"
chrono = "0.4.19"
convert_case = ">=0.4.0"
strum = ">=0.21.0"
strum_macros = ">=0.21.0"
